# proteoflux

./: .gitignore  CITATION.cff  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: release.yml  smoke-test.yml
docs/: CONFIGURATION.md
examples/phospho_small/: README.md  annotation_phospho.tsv  config_phospho.yaml
examples/searle_small/: README.md  annotation_searle.tsv  config.yaml
proteoflux/: Contaminants_2022.fasta  __init__.py  cli.py  config.yaml  config_dbp.yaml  config_diann.yaml  config_fp.yaml  config_peptidomics.yaml  config_phospho.yaml  config_phospho_noFT.yaml  config_phospho_noFT_pilot.yaml  config_pilot.yaml  main.py  stats.py
proteoflux.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
proteoflux/analysis/: adata_schema.py  clustering.py  ebayes_moderator.py  ebayes_prior.py  limma_pipeline.py  limma_pipeline_pylimma.py  linearmodelfitter.py  missingness.py  r_limma_pipeline.py  robust_prior.py  statisticaltester.py  stats_ops.py
proteoflux/dataset/: intermediateresults.py  preprocessresults.py
proteoflux/design/: contrast.py  contrastbuilder.py  designmatrixbuilder.py
proteoflux/evaluation/: evaluation_utils.py  imputation_evaluator.py  normalization_evaluator.py
proteoflux/export/: de_exporter.py  differential_expression_plotter.py  pdf_report_exporter.py  plot_utils.py
proteoflux/panel_app/: app.py  session_state.py
proteoflux/panel_app/components/: normalization_plots.py  overview_plots.py  plot_utils.py
proteoflux/panel_app/tabs/: overview_tab.py
proteoflux/templates/: diann181-proteomics.yaml  fragpipe-peptidomics.yaml  fragpipe-proteomics.yaml  spectronaut-peptidomics.yaml  spectronaut-phosphoproteomics.yaml  spectronaut-proteomics.yaml  user_template.yaml
proteoflux/utils/: analysis_type.py  cli_setup.py  compact_repr.py  directlfq.py  directlfq_config.py  harmonizer.py  ptm_map.py  random_utils.py  semantics.py  sequence_ops.py  utils.py
proteoflux/workflow/: dataset.py  imputer_factory.py  peptide_tables.py  preprocessing.py
proteoflux/workflow/imputers/: hybridimputer.py  lc_conmed_imputer.py  min_imputers.py  nsknnimputer.py  simpleimputers.py  tnknnimputer.py
proteoflux/workflow/normalizers/: regression_normalization.py  regression_normalization_UNUSED.py
