[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proteoflux"
version = "1.0.0"
description = "Transparent and reproducible proteomics analysis pipeline"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "numpy>=1.24,<2.2",
    "scanpy==1.11.0",
    "numba==0.61.0",
    "matplotlib",
    "seaborn",
    "typer[all]",
    "pyyaml",
    "scikit-learn",#">=1.1,<1.6",
    "scikit-misc",
    "missingno",
    "torch",
    "fastcluster",
    "anndata==0.11.4",
    "pyarrow",
    "polars",
    "openpyxl",
    "xlsxwriter",
    "InquirerPy",
    "inmoose==0.7.8",
]

[project.scripts]
proteoflux = "proteoflux.cli:app"

[tool.setuptools.package-data]
"proteoflux.templates" = ["*.yaml"]

