[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proteoflux"
version = "1.8.4"
description = "Transparent and reproducible proteomics analysis pipeline"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
  {name = "Biozentrum Proteomics Core Facility", email = "dariush.mollet@unibas.ch"}
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "pandas>=2.1,<3.0",
    "numpy>=1.24,<2.2",
    "scanpy==1.11.0",
    "numba==0.61.0",
    "matplotlib",
    "seaborn",
    "typer[all]",
    "pyyaml",
    "scikit-learn",#">=1.1,<1.6",
    "scikit-misc",
    "missingno",
    "torch",
    "fastcluster",
    "anndata==0.11.4",
    "pyarrow",
    "polars==1.36.1",
    "openpyxl",
    "xlsxwriter",
    "InquirerPy",
    #"inmoose==0.7.8",
    "inmoose",
    "directlfq[dask]",
    "tqdm",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[project.scripts]
proteoflux = "proteoflux.cli:app"

[tool.setuptools.package-data]
"proteoflux.templates" = ["*.yaml"]

[project.urls]
Repository = "https://github.com/afanc/proteoflux"
Issues = "https://github.com/afanc/proteoflux/issues"
